doc: add documantaion for profile image handlers
